--- a/assets/css/3-pages/_articles.scss
+++ b/assets/css/3-pages/_articles.scss
@@ -1,12 +1,5 @@
 #articles {
   background-color: $light-text-color;
-  h1 {
-    font-size: 2rem;
-    @media(max-width: 768px) {
-      text-align: center;
-      margin: 70px 0 -20px 0;
-    }
-  }
   article {
     padding: 50px 0;
     border-bottom: 1px dashed darken($light-text-color, 20%);
